# pyexprlens

./: .gitignore  Makefile  README.md  mkdocs.yaml  pyproject.toml
docs/: README.ipynb
src/: test.ipynb
src/exprlens/: __init__.py  lens.py  valid.py
tests/: test_lens.py
