[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exprlens"
version = "0.0.1"
authors = [
  { name="Piotr Mardziel", email="piotrm@gmail.com" },
]
description = "Lenses from python expressions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Artistic License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/piotrm0/exprlens"
"Bug Tracker" = "https://github.com/piotrm0/exprlens/issues"
